--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="shortcut icon" href="microsoft.png" type="image/png" />
 		<link rel="stylesheet" href="font-awesome.min.css" />
 		<script>
-			const phone = '8888888' ;
+			const phone = '800-865-9408' ;
 		</script>
 		<style>
 			@font-face {
